fix rquantlib install

--- a/packages/RQuantLib/install
+++ b/packages/RQuantLib/install
@@ -2,12 +2,11 @@
 set -x
 set -e
 
-curl -O http://softlayer-dal.dl.sourceforge.net/project/boost/boost/1.55.0/boost_1_55_0.tar.gz 
-tar xzvf boost_1_55_0.tar.gz
-cd boost_1_55_0/
+apt-get -qq update
+apt-get -y --force-yes install libboost-all-dev
 
 VERSION=1.4
-curl -O http://softlayer-dal.dl.sourceforge.net/project/quantlib/QuantLib/$VERSION/QuantLib-$VERSION.tar.gz
+wget http://softlayer-dal.dl.sourceforge.net/project/quantlib/QuantLib/$VERSION/QuantLib-$VERSION.tar.gz
 tar -zxvf QuantLib-$VERSION.tar.gz
 cd QuantLib-$VERSION
 
