--- a/packages/Biobase/install
+++ b/packages/Biobase/install
@@ -2,4 +2,4 @@
 set -x
 set -e
 
-sudo R -e 'source("http://bioconductor.org/biocLite.R"); biocLite()'
+sudo R -e 'source("http://bioconductor.org/biocLite.R"); biocLite("Biobase")'
