--- a/packages/nloptr/install
+++ b/packages/nloptr/install
@@ -3,6 +3,7 @@ set -x
 set -e
 
 VERSION=2.4.2
+cd /tmp
 curl -O http://ab-initio.mit.edu/nlopt/nlopt-$VERSION.tar.gz
 tar -zxvf nlopt-$VERSION.tar.gz
 cd nlopt-$VERSION
@@ -10,3 +11,5 @@ cd nlopt-$VERSION
 CFLAGS="-fPIC" ./configure
 make
 make install
+
+rm -rf /tmp/nlopt-$VERSION /tmp/nlopt-$VERSION.tar.gz
