--- a/packages/tkrplot/install
+++ b/packages/tkrplot/install
@@ -3,4 +3,4 @@ set -x
 set -e
 
 apt-get -qq update
-apt-get -qq --force-yes install tk8.5 tk8.5-devel tcl8.5 tcl8.5-devel
+apt-get -qq --force-yes install tk8.5 tk8.5-dev tcl8.5 tcl8.5-dev
