Normalize calls to apt-get
- Use `-y` instead of `--force-yes` with `install`
- `-qq` after `update`
- Add Makefile
- Add .travis.yml

--- a/packages/RAmazonS3/install
+++ b/packages/RAmazonS3/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libdigest-hmac-perl
+apt-get update -qq
+apt-get install -y libdigest-hmac-perl
