--- a/packages/gmp/install
+++ b/packages/gmp/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libgmp10-dev
+apt-get update -qq
+apt-get install -y libgmp10-dev
