--- a/packages/gsl/install
+++ b/packages/gsl/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libgsl0-dev
+apt-get update -qq
+apt-get install -y libgsl0-dev
