--- a/packages/ncdf/install
+++ b/packages/ncdf/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libnetcdf6 libnetcdf-dev netcdf-bin
+apt-get update -qq
+apt-get install -y libnetcdf6 libnetcdf-dev netcdf-bin
