--- a/packages/rcdd/install
+++ b/packages/rcdd/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libgmp-dev libgmp3-dev
+apt-get update -qq
+apt-get install -y libgmp-dev libgmp3-dev
