--- a/packages/rgl/install
+++ b/packages/rgl/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install libgl1-mesa-dev libglu1-mesa-dev
+apt-get update -qq
+apt-get install -y libgl1-mesa-dev libglu1-mesa-dev
