--- a/packages/tkrplot/install
+++ b/packages/tkrplot/install
@@ -2,5 +2,5 @@
 set -x
 set -e
 
-apt-get -qq update
-apt-get -qq --force-yes install tk8.5 tk8.5-dev tcl8.5 tcl8.5-dev
+apt-get update -qq
+apt-get install -y tk8.5 tk8.5-dev tcl8.5 tcl8.5-dev
