--- a/packages/sodium/install
+++ b/packages/sodium/install
@@ -2,5 +2,8 @@
 set -x
 set -e
 
+apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C7917B12
+echo "deb http://ppa.launchpad.net/chris-lea/libsodium/ubuntu $(lsb_release -cs) main" >> /etc/apt/sources.list.d/libsodium-ppa.list
+
 apt-get update -qq
 apt-get install -y libsodium-dev
