And actually putting back the install of the needed library after I verify that the test harness is working again would be nice

--- a/packages/Rsymphony/install
+++ b/packages/Rsymphony/install
@@ -3,4 +3,4 @@ set -x
 set -e
 
 apt-get update -qq
-apt-get install -y coinor-libsymphony-dev # coinor-libcgl-dev
+apt-get install -y coinor-libsymphony-dev coinor-libcgl-dev
