--- a/packages/magick/install
+++ b/packages/magick/install
@@ -2,5 +2,8 @@
 set -x
 set -e
 
+# PPA has recent ImageMagick versions for for Ubuntu Trusty/Xenial
+apt-get install -y python-software-properties
+add-apt-repository -y ppa:opencpu/imagemagick
 apt-get update -qq
 apt-get install -y libmagick++-dev
