--- a/packages/lwgeom/install
+++ b/packages/lwgeom/install
@@ -2,6 +2,6 @@
 set -x
 set -e
 
-sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-sudo apt-get update
-sudo apt-get install libgdal-dev libgeos-dev libproj-dev libudunits2-dev liblwgeom-dev
+add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+apt-get update
+apt-get install libgdal-dev libgeos-dev libproj-dev libudunits2-dev liblwgeom-dev
