--- a/packages/odbc/install
+++ b/packages/odbc/install
@@ -6,7 +6,7 @@ set -e
 # fetch install script
 curl -O https://drivers.rstudio.org/7C152C12/odbc-install.sh
 chmod +x odbc-install.sh
-mkdir /opt/rstudio-drivers
+mkdir -p /opt/rstudio-drivers
 
 # install & configure drivers
 ./odbc-install.sh --install /opt/rstudio-drivers --eula
