--- a/packages/jqr/install
+++ b/packages/jqr/install
@@ -2,6 +2,7 @@
 set -x
 set -e
 
+apt-get update -qq
 apt-get install -y software-properties-common python-software-properties
 add-apt-repository -y ppa:opencpu/jq
 apt-get update -qq
