--- a/packages/magick/install
+++ b/packages/magick/install
@@ -3,6 +3,7 @@ set -x
 set -e
 
 # PPA has recent ImageMagick versions for for Ubuntu Trusty/Xenial
+apt-get update -qq
 apt-get install -y software-properties-common python-software-properties
 add-apt-repository -y ppa:opencpu/imagemagick
 apt-get update -qq
