--- a/packages/sodium/install
+++ b/packages/sodium/install
@@ -5,7 +5,7 @@ set -e
 OS_DISTRIBUTION=$(lsb_release -cs)
 
 function add_repo {
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C7917B12
+    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0xB9316A7BC7917B12
     echo "deb http://ppa.launchpad.net/chris-lea/libsodium/ubuntu $OS_DISTRIBUTION main" >> /etc/apt/sources.list.d/libsodium-ppa.list
 }
 
