--- a/packages/animation/install
+++ b/packages/animation/install
@@ -3,4 +3,4 @@ set -x
 set -e
 
 apt-get update -qq
-apt-get install -y graphicsmagick libav-tools pdftk
+apt-get install -y graphicsmagick libav-tools pdftk x264 x265
