--- a/packages/av/install
+++ b/packages/av/install
@@ -15,4 +15,4 @@ if [ $OS_DISTRIBUTION == "trusty" ]; then
 fi
 
 apt-get update -qq
-apt-get install -y ffmpeg libav-tools x264 x265 libfdk-aac-dev libavfilter-dev
+apt-get install -y ffmpeg libav-tools x264 x265 libfdk-aac-dev libavfilter-dev libavformat-dev
