--- a/packages/av/install
+++ b/packages/av/install
@@ -8,11 +8,11 @@ OS_DISTRIBUTION=$(lsb_release -cs)
 apt-get update -qq
 apt-get install -y software-properties-common
 
-if [ $OS_DISTRIBUTION == "trusty" || $OS_DISTRIBUTION == "xenial" ]; then
-	add-apt-repository ppa:jonathonf/ffmpeg-3 -y
+if [ "$OS_DISTRIBUTION" == "trusty" || "$OS_DISTRIBUTION" == "xenial" ]; then
+	add-apt-repository -y ppa:jonathonf/ffmpeg-3 
 fi
 
-add-apt-repository ppa:jonathonf/ffmpeg-4 -y
+add-apt-repository -y ppa:jonathonf/ffmpeg-4
 
 apt-get update -qq
 apt-get install -y libavfilter-dev libavformat-dev
