--- a/packages/RSelenium/install
+++ b/packages/RSelenium/install
@@ -2,5 +2,11 @@
 set -x
 set -e
 
+OS_DISTRIBUTION=$(lsb_release -cs)
+
 apt-get update -qq
-apt-get install -y phantomjs
+apt-get install -y libssl-dev phantomjs
+
+if [[ ${OS_DISTRIBUTION} != "bionic" ]]; then
+    apt-get install -y libssl-dev
+fi
