--- a/packages/jqr/install
+++ b/packages/jqr/install
@@ -8,7 +8,7 @@ apt-get update -qq
 apt-get install -y software-properties-common python-software-properties
 
 # these sysdeps are available by default in bionic
-if [ ${OS_DISTRIBUTION} != "bionic" ]; then
+if [ "${OS_DISTRIBUTION}" == "xenial" ] || [ "${OS_DISTRIBUTION}" == "trusty" ]; then
   add-apt-repository -y ppa:opencpu/jq
   apt-get update -qq
 fi
