--- a/packages/magick/install
+++ b/packages/magick/install
@@ -5,11 +5,11 @@ set -e
 OS_DISTRIBUTION=$(lsb_release -cs)
 
 apt-get update -qq
-apt-get install -y software-properties-common python-software-properties
 
-# these sysdeps are available by default in bionic
-if [ ${OS_DISTRIBUTION} != "bionic" ]; then
-  # PPA has recent ImageMagick versions for for Ubuntu Trusty/Xenial
+# this sysdep is available by default in bionic
+if [[ ${OS_DISTRIBUTION} = "xenial" ]]; then
+  apt-get install -y software-properties-common python-software-properties
+  # PPA has recent ImageMagick versions for for Ubuntu Xenial
   add-apt-repository -y ppa:opencpu/imagemagick
   apt-get update -qq
 fi
