--- a/packages/RSelenium/install
+++ b/packages/RSelenium/install
@@ -5,8 +5,8 @@ set -e
 OS_DISTRIBUTION=$(lsb_release -cs)
 
 apt-get update -qq
-apt-get install -y libssl-dev phantomjs
+apt-get install -y phantomjs
 
-if [[ ${OS_DISTRIBUTION} != "bionic" ]]; then
+if [[ ${OS_DISTRIBUTION} = "xenial" ]]; then
     apt-get install -y libssl-dev
 fi
