added up to date ppa as per https://tecadmin.net/install-ffmpeg-on-linux/

--- a/packages/animation/install
+++ b/packages/animation/install
@@ -16,8 +16,8 @@ add-apt-repository -y ppa:opencpu/imagemagick
 # check for supported platform (whitelisted ubuntu versions)
 if [ $OS_DISTRIBUTION == "trusty" ]; then
 	add-apt-repository ppa:mc3man/trusty-media
-# else 
-# 	add-apt-repository ppa:jonathonf/ffmpeg-3
+else 
+	add-apt-repository ppa:jonathonf/ffmpeg-4
 fi
 
 apt-get update -qq
