updated install for apt-get add repo

--- a/packages/animation/install
+++ b/packages/animation/install
@@ -15,7 +15,7 @@ add-apt-repository -y ppa:opencpu/imagemagick
 
 # check for supported platform (whitelisted ubuntu versions)
 if [ $OS_DISTRIBUTION == "trusty" ]; then
-	add-apt-repository ppa:mc3man/trusty-media
+	add-apt-repository -y ppa:mc3man/trusty-media
 # else 
 # 	add-apt-repository ppa:jonathonf/ffmpeg-3
 fi
