--- a/packages/pagedown/install
+++ b/packages/pagedown/install
@@ -9,9 +9,12 @@ wget https://github.com/jgm/pandoc/releases/download/2.2.3.1/pandoc-2.2.3.1-1-am
 dpkg -i pandoc-2.2.3.1-1-amd64.deb
 rm pandoc-2.2.3.1-1-amd64.deb
 
-# install libssl-dev for the websocket package. This is required for the bionic image (this wasn't necessary for xenial)
-# install chromium to use pagedown::chrome_print()
 apt-get update -qq
-apt-get install -y \
-        libssl-dev \
-        chromium-browser
+
+# install libssl-dev for the websocket package. No need for xenial.
+if [ $(lsb_release -cs) == "bionic" ] ; then
+  apt-get install -y libssl-dev
+fi
+
+# install chromium to use pagedown::chrome_print()
+apt-get install -y chromium-browser
