fix tensorfow install
Closes #269

--- a/packages/tensorflow/install
+++ b/packages/tensorflow/install
@@ -3,10 +3,5 @@
 set -x
 set -e
 
-# Use latest version of pip in order to obtain binary packages instead of compiling numpy, etc.
-curl -O https://bootstrap.pypa.io/get-pip.py
-python get-pip.py
-rm get-pip.py
-
-pip install --upgrade tensorflow keras scipy h5py pyyaml requests Pillow
+pip3 install --upgrade tensorflow keras scipy h5py pyyaml requests Pillow
 
