add support for focal to animation

--- a/packages/animation/install
+++ b/packages/animation/install
@@ -11,14 +11,22 @@ apt-get install -y software-properties-common
 # Even though animation depends upon magick, the test framework doesn't run
 # the installers for imported packages, so we need to install libmagick++-dev
 # here as well.
-add-apt-repository -y ppa:cran/imagemagick
+
+if [[ $OS_DISTRIBUTION == "xenial" || $OS_DISTRIBUTION == "trusty" ]]; then
+  add-apt-repository -y ppa:cran/imagemagick
+fi
 
 # check for supported platform (whitelisted ubuntu versions)
 if [ $OS_DISTRIBUTION == "trusty" ]; then
 	add-apt-repository ppa:mc3man/trusty-media
-else 
+elif [ $OS_DISTRIBUTION == "xenial" ]; then
 	add-apt-repository ppa:jonathonf/ffmpeg-4
 fi
 
 apt-get update -qq
-apt-get install -y libmagick++-dev ffmpeg graphicsmagick libav-tools pdftk x264 x265
+
+if [ $OS_DISTRIBUTION == "focal" ]; then
+  apt-get install -y libmagick++-dev ffmpeg graphicsmagick pdftk x264 x265
+else
+  apt-get install -y libmagick++-dev ffmpeg graphicsmagick libav-tools pdftk x264 x265
+fi
