--- a/packages/gert/install
+++ b/packages/gert/install
@@ -2,12 +2,13 @@
 set -x
 set -e
 
-OS_CODENAME=$(lsb_release -cs)
+OS_DISTRIBUTION=$(lsb_release -cs)
 
 # install libgit2 on xenial only
-if [ "${OS_CODENAME}" == "xenial" ]; then
+if [ "${OS_DISTRIBUTION}" == "xenial" ]; then
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0xb3cf35c315b55a9f
   echo "deb http://ppa.launchpad.net/cran/libgit2/ubuntu $(lsb_release -cs) main" >> /etc/apt/sources.list.d/cran-libgit2-ppa.list
-  apt-get update -qq
-  apt-get install -y libgit2-dev
 fi
+
+apt-get update -qq
+apt-get install -y libgit2-dev
