--- a/packages/topicmodels/install
+++ b/packages/topicmodels/install
@@ -2,5 +2,12 @@
 set -x
 set -e
 
+OS_DISTRIBUTION=$(lsb_release -cs)
+
 apt-get update -qq
-apt-get install -y libgsl0-dev
+
+if [ "${OS_DISTRIBUTION}" == "xenial" ]; then
+  apt-get install -y libgsl0-dev libgfortran-5-dev libblas-dev
+else
+  apt-get install -y libgsl-dev
+fi
