--- a/packages/docxtractr/install
+++ b/packages/docxtractr/install
@@ -1,9 +1,16 @@
-
 #!/bin/bash
-
 set -x
 set -e
 
+OS_DISTRIBUTION=$(lsb_release -cs)
+
+apt-get update -qq
+apt-get install -y software-properties-common
 add-apt-repository ppa:libreoffice/ppa
 apt-get update -qq
 apt-get install -y libreoffice
+
+if [ "${OS_DISTRIBUTION}" == "focal" ]; then
+  echo "/usr/lib/libreoffice/program" > /etc/ld.so.conf.d/libreoffice.conf
+  ldconfig
+fi
