--- a/packages/docxtractr/install
+++ b/packages/docxtractr/install
@@ -3,14 +3,12 @@ set -x
 set -e
 
 OS_DISTRIBUTION=$(lsb_release -cs)
-
-apt-get update -qq
-apt-get install -y software-properties-common
-add-apt-repository ppa:libreoffice/ppa
-apt-get update -qq
-apt-get install -y libreoffice
-
 if [ "${OS_DISTRIBUTION}" == "focal" ]; then
-  echo "/usr/lib/libreoffice/program" > /etc/ld.so.conf.d/libreoffice.conf
-  ldconfig
+  echo "docxtractr is not supported on Ubuntu 20.04 due to: https://github.com/rstudio/shinyapps-package-dependencies/issues/282"
+else
+  apt-get update -qq
+  apt-get install -y software-properties-common
+  add-apt-repository ppa:libreoffice/ppa
+  apt-get update -qq
+  apt-get install -y libreoffice
 fi
