rcbc has some different install requirements, and also needs -y in the install step.  It was never actually doing anything

--- a/packages/rcbc/install
+++ b/packages/rcbc/install
@@ -4,4 +4,4 @@ set -x
 set -e
 
 apt-get update -qq
-apt-get install coinor-libcbc-dev coinor-libclp-dev
+apt-get install -y coinor-libcbc-dev coinor-libclp-dev coinor-libcgl-dev libbz2-dev
