--- a/packages/gsl/install
+++ b/packages/gsl/install
@@ -2,5 +2,12 @@
 set -x
 set -e
 
+OS_DISTRIBUTION=$(lsb_release -cs)
+
 apt-get update -qq
-apt-get install -y libgsl-dev
+
+if [ ${OS_DISTRIBUTION} == "xenial" ]; then
+  apt-get install -y libgsl0-dev
+else
+  apt-get install -y libgsl-dev
+fi
