--- a/packages/jqr/install
+++ b/packages/jqr/install
@@ -8,7 +8,7 @@ apt-get update -qq
 apt-get install -y software-properties-common
 
 # these sysdeps are available by default in bionic
-if [ "${OS_DISTRIBUTION}" == "xenial" ] || [ "${OS_DISTRIBUTION}" == "trusty" ]; then
+if [ "${OS_DISTRIBUTION}" == "xenial" ]; then
   add-apt-repository -y ppa:cran/jq
   apt-get update -qq
   apt-get install -y python-software-properties
