Standardize on OS_CODENAME instead of OS_DISTRIBUTION

--- a/packages/animation/install
+++ b/packages/animation/install
@@ -2,7 +2,7 @@
 set -x
 set -e
 
-OS_DISTRIBUTION=$(lsb_release -cs)
+OS_CODENAME=$(lsb_release -cs)
 
 apt-get update -qq
 
@@ -12,18 +12,18 @@ apt-get install -y software-properties-common
 # the installers for imported packages, so we need to install libmagick++-dev
 # here as well.
 
-if [ $OS_DISTRIBUTION == "xenial" ]; then
+if [ $OS_CODENAME == "xenial" ]; then
   add-apt-repository -y ppa:cran/imagemagick
 fi
 
 # check for supported platform (whitelisted ubuntu versions)
-if [ $OS_DISTRIBUTION == "xenial" ]; then
+if [ $OS_CODENAME == "xenial" ]; then
 	add-apt-repository ppa:jonathonf/ffmpeg-4
 fi
 
 apt-get update -qq
 
-if [ $OS_DISTRIBUTION == "focal" ]; then
+if [ $OS_CODENAME == "focal" ]; then
   apt-get install -y libmagick++-dev ffmpeg graphicsmagick pdftk x264 x265
 else
   apt-get install -y libmagick++-dev ffmpeg graphicsmagick libav-tools pdftk x264 x265
