--- a/packages/av/install
+++ b/packages/av/install
@@ -2,14 +2,14 @@
 set -x
 set -e
 
-OS_DISTRIBUTION=$(lsb_release -cs)
+OS_CODENAME=$(lsb_release -cs)
 
 # need for add-apt-repository
 apt-get update -qq
 apt-get install -y software-properties-common
 
 # check for supported platform (whitelisted ubuntu versions)
-if [ $OS_DISTRIBUTION == "xenial" ]; then
+if [ $OS_CODENAME == "xenial" ]; then
 	add-apt-repository ppa:jonathonf/ffmpeg-4
 fi
 
