--- a/packages/magick/install
+++ b/packages/magick/install
@@ -16,3 +16,12 @@ if [ ${OS_CODENAME} == "xenial" ]; then
 fi
 
 apt-get install -y libmagick++-dev
+
+
+if [ ${OS_CODENAME} == "focal" ]; then
+  # Enable imagemagick ghostscript features
+  # See https://www.kb.cert.org/vuls/id/332928/
+  # focal has a new enough version of ghostscript
+  sed -i "\$i \ \ <policy domain=\"coder\" rights=\"read | write\" pattern=\"{PS,PS2,PS3,EPS,PDF,XPS}\" />" /etc/ImageMagick-6/policy.xml
+fi
+
