use chrome instead of chromium

--- a/packages/pagedown/install
+++ b/packages/pagedown/install
@@ -5,5 +5,7 @@ set -e
 
 apt-get update -qq
 
-# install chromium to use pagedown::chrome_print()
-apt-get install -y chromium-browser
+# install chrome to use pagedown::chrome_print()
+curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+apt-get install -y ./google-chrome-stable_current_amd64.deb
+rm google-chrome-stable_current_amd64.deb
