--- a/packages/bedr/install
+++ b/packages/bedr/install
@@ -7,5 +7,7 @@ apt-get update -qq
 apt-get install -y bedtools tabix
 
 wget "https://github.com/bedops/bedops/releases/download/v2.4.40/bedops_linux_x86_64-v2.4.40.tar.bz2"
-tar jxvf bedops_linux_x86_64-v2.4.40.tar.bz2
-cp bin/* /usr/local/bin
+mkdir bedops
+tar jxvf bedops_linux_x86_64-v2.4.40.tar.bz2 -C bedops
+cp -n bedops/bin/* /usr/local/bin
+
