--- a/packages/lwgeom/install
+++ b/packages/lwgeom/install
@@ -10,4 +10,4 @@ if [ $OS_CODENAME == "xenial" ]; then
 fi
 
 apt-get update -qq
-apt-get install -y libudunits2-dev libgdal-dev libgeos-dev libproj-dev libharfbuzz-dev libfribidi-dev
+apt-get install -y libudunits2-dev libgdal-dev libgeos-dev libproj-dev
