--- a/packages/ChemmineOB/install
+++ b/packages/ChemmineOB/install
@@ -4,9 +4,9 @@ set -e
 
 OS_CODENAME=$(lsb_release -cs)
 
-if [ "${OS_CODENAME}" == "focal" ]; then
-  echo "deb-src http://archive.ubuntu.com/ubuntu/ focal universe" >> /etc/apt/sources.list
-  echo "deb-src http://archive.ubuntu.com/ubuntu/ focal-updates universe" >> /etc/apt/sources.list
+if [ "${OS_CODENAME}" == "focal" ] || [ "${OS_CODENAME}" == "jammy" ]; then
+  echo "deb-src http://archive.ubuntu.com/ubuntu/ ${OS_CODENAME} universe" >> /etc/apt/sources.list
+  echo "deb-src http://archive.ubuntu.com/ubuntu/ ${OS_CODENAME}-updates universe" >> /etc/apt/sources.list
   apt-get update -qq
   apt-get install -y libopenbabel-dev libeigen3-dev
 else
